ep15 - Refactoring part 2 and 3
