# app/services/currency/server/currency.go
@@ -2,21 +2,29 @@ package server
 
 import (
 	"context"
+	"fmt"
 
+	"github.com/ezratameno/microservices/app/services/currency/data"
 	currency "github.com/ezratameno/microservices/app/services/currency/protos/currency/app/services/currency/protos"
 	"github.com/hashicorp/go-hclog"
 )
 
 // Currency is a gRPC server it implements the methods defined by the CurrencyServer interface
 type Currency struct {
-	log hclog.Logger
+	log          hclog.Logger
+	exchangeRate *data.ExchangeRates
 }
 
 // NewCurrency creates a new Currency server
-func NewCurrency(log hclog.Logger) *Currency {
-	return &Currency{
-		log: log,
+func NewCurrency(log hclog.Logger) (*Currency, error) {
+	exchangeRates, err := data.NewRates(log)
+	if err != nil {
+		return nil, err
 	}
+	return &Currency{
+		log:          log,
+		exchangeRate: exchangeRates,
+	}, nil
 }
 
 // GetRate implements the CurrencyServer GetRate method and returns the currency exchange rate
@@ -24,7 +32,13 @@ func NewCurrency(log hclog.Logger) *Currency {
 func (c *Currency) GetRate(ctx context.Context, request *currency.RateRequest) (*currency.RateResponse, error) {
 	c.log.Info("Handle GetRate", "base", request.GetBase(), "destination", request.GetDestination())
 
-	return &currency.RateResponse{Rate: 0.5}, nil
+	rate, err := c.exchangeRate.GetRate(request.Base.String(), request.Destination.String())
+	if err != nil {
+		return nil, err
+	}
+
+	fmt.Println(rate)
+	return &currency.RateResponse{Rate: rate}, nil
 }
 
 // mustEmbedUnimplementedCurrencyServer()
