# app/services/products-api/handlers/get.go
@@ -1,10 +1,8 @@
 package handlers
 
 import (
-	"context"
 	"net/http"
 
-	currency "github.com/ezratameno/microservices/app/services/currency/protos/currency/app/services/currency/protos"
 	"github.com/ezratameno/microservices/app/services/products-api/data"
 )
 
@@ -15,15 +13,21 @@ import (
 
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
-	p.l.Println("[DEBUG] get all records")
+	p.log.Debug("get all records")
+	cur := r.URL.Query().Get("currency")
 
-	prods := data.GetProducts()
+	prods, err := p.productsDB.GetProducts(cur)
+	if err != nil {
+		p.log.Error("failed getting products", err)
+		return
+	}
 
 	rw.Header().Add("Content-Type", "application/json")
-	err := data.ToJSON(prods, rw)
+	err = data.ToJSON(prods, rw)
 	if err != nil {
-		// we should never be here but log the error just incase
-		p.l.Println("[ERROR] serializing product", err)
+		// we should never be here but log the error just in case
+		p.log.Error("serializing product", err)
+		return
 	}
 }
 
@@ -37,46 +41,31 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
 	id := getProductID(r)
 
-	p.l.Println("[DEBUG] get record id", id)
+	cur := r.URL.Query().Get("currency")
+	p.log.Debug("get record id", id)
 
-	prod, err := data.GetProductByID(id)
+	prod, err := p.productsDB.GetProductByID(id, cur)
 
 	switch err {
 	case nil:
 
 	case data.ErrProductNotFound:
-		p.l.Println("[ERROR] fetching product", err)
+		p.log.Error("fetching product", err)
 
 		rw.WriteHeader(http.StatusNotFound)
 		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
 	default:
-		p.l.Println("[ERROR] fetching product", err)
+		p.log.Error("etching product", err)
 
 		rw.WriteHeader(http.StatusInternalServerError)
 		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
 	}
 
-	// get exchange rate
-
-	rateReq := &currency.RateRequest{
-		Base:        currency.Currencies_EUR,
-		Destination: currency.Currencies_GBP,
-	}
-	rateResp, err := p.currencyClient.GetRate(context.Background(), rateReq)
-	if err != nil {
-		p.l.Println("[Error] getting new rate", err)
-		data.ToJSON(&GenericError{Message: err.Error()}, rw)
-		return
-	}
-
-	// update the price
-	prod.Price = prod.Price * rateResp.Rate
-
 	err = data.ToJSON(prod, rw)
 	if err != nil {
 		// we should never be here but log the error just incase
-		p.l.Println("[ERROR] serializing product", err)
+		p.log.Error("serializing product", err)
 	}
 }
