# app/services/products-api/swagger.yaml
@@ -67,6 +67,13 @@ paths:
         get:
             description: Return a list of products from the database
             operationId: listProducts
+            parameters:
+                - description: |-
+                    Currency used when returning the price of the product,
+                    when not specified currency is returned in GBP.
+                  in: query
+                  name: Currency
+                  type: string
             responses:
                 "200":
                     $ref: '#/responses/productsResponse'
@@ -139,6 +146,12 @@ paths:
             description: Return a list of products from the database
             operationId: listSingleProduct
             parameters:
+                - description: |-
+                    Currency used when returning the price of the product,
+                    when not specified currency is returned in GBP.
+                  in: query
+                  name: Currency
+                  type: string
                 - description: The id of the product for which the operation relates
                   format: int64
                   in: path
